objects/UNITY_Invoice__c.object
<CustomObject>
    <description>UNITY Invoice object</description>
    <fields>
        <fullName>MSPFS_Intercompany_SL_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the intercompany transfer invoice was sent to SL</description>
        <label>Intercompany SL Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSPFS_Intercompany_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intercompany Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Agent information related to the Invoice Case</description>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Bill_To_Address__c</fullName>
        <formula>IF(UNITY_Customer__r.Residential__c,
UNITY_Customer__r.MH_Primary_Contact__r.FirstName + &quot; &quot; + UNITY_Customer__r.MH_Primary_Contact__r.LastName,
IF(OR(UNITY_Customer__r.UNITY_Bill_to_Self__c,UNITY_Customer__r.MSPFS_MSP_Bill_to_Self__c),
LEFT(UNITY_Customer__r.Name,FIND(&apos; - &apos;&amp; UNITY_Customer__r.ShippingStreet,UNITY_Customer__r.Name,0)),
UNITY_Customer__r.Name
)
) + BR() +
UNITY_Customer__r.BillingStreet + BR() + 
UNITY_Customer__r.BillingCity + &quot; &quot; + 
UNITY_Customer__r.BillingState + &quot; &quot; +  
UNITY_Customer__r.BillingPostalCode + &quot; &quot; + 
UNITY_Customer__r.BillingCountry</formula>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Business_Unit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Business Unit Account)</relationshipLabel>
        <relationshipName>Business_Unit_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Case_Thread_ID__c</fullName>
        <formula>&quot;ref:_&quot;&amp;LEFT( $Organization.Id,5)&amp;SUBSTITUTE(RIGHT($Organization.Id,10),&quot;0&quot;,&quot;&quot;)&amp;&quot;._&quot;&amp;LEFT( UNITY_Case__r.Id ,5)&amp;SUBSTITUTE(LEFT(RIGHT(UNITY_Case__r.Id,10),5),&quot;0&quot;,&quot;&quot;)&amp;RIGHT(UNITY_Case__r.Id,5)&amp;&quot;:ref&quot;</formula>
        <label>Case Thread ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UNITY_Cust_Invoices_in_Service_Channel__c</fullName>
        <formula>IF( AND(!ISBLANK(UNITY_Customer_Invoice_Methods__c),CONTAINS(UNITY_Customer_Invoice_Methods__c,&apos;Service Channel&apos;) ), true , false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Invoices via Service Channel?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Email__c</fullName>
        <description>Stores Customer email information from case</description>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Invoice_Methods__c</fullName>
        <description>Used to display and report on the invoicing methods of the customer</description>
        <label>Customer Invoice Methods</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Contract of Customer. Should be copied from the Case.</description>
        <label>UNITY_Service Contract</label>
        <referenceTo>UNITY_Service_Contract__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bill to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Customer)</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Discount__c</fullName>
        <label>Discount %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Discount_from_POs__c</fullName>
        <description>The relative discount of discounts applied at the PO level</description>
        <inlineHelpText>The discounts applied at the PO level</inlineHelpText>
        <label>Discount from POs</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Doc_Type__c</fullName>
        <label>Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                    <default>true</default>
                    <label>IN</label>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Does_Line_Item_Discount_Amt_Exist__c</fullName>
        <label>Does Line Item Discount Amount Exist</label>
        <summarizedField>UNITY_Invoice_Line_Item__c.UNITY_Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>UNITY_Invoice_Line_Item__c.UNITY_Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Invoice_Line_Item__c.UNITY_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Email_Billing_Address__c</fullName>
        <formula>UNITY_Case__r.UNITY_Email_Billing_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Email_Invoice_Guarantee_Text__c</fullName>
        <formula>UNITY_Case__r.UNITY_Email_Invoice_Guarantee_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Invoice Guarantee Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Email_Logo_URL__c</fullName>
        <formula>UNITY_Case__r.UNITY_Email_Logo_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Logo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Final_Price2__c</fullName>
        <description>Final Price with Adjustments (No Tax Included)</description>
        <formula>IF(
  AND(NOT(ISBLANK(UNITY_Discount__c)),UNITY_Discount__c&gt;0), 
  (1-UNITY_Discount__c)*UNITY_Line_Item_Discounted_Price__c,
  IF(
    AND(NOT(ISBLANK(UNITY_Discount_Amount__c)),UNITY_Discount_Amount__c&gt;0),
    UNITY_Line_Item_Discounted_Price__c - UNITY_Discount_Amount__c,
    UNITY_Line_Item_Discounted_Price__c
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Final Price with Adjustments. No Tax</inlineHelpText>
        <label>Final Price (With Adjustments)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Final_Price__c</fullName>
        <formula>IF(
  NOT(ISBLANK(UNITY_Discount_Amount__c)),
  (1-UNITY_Discount__c)*UNITY_Line_Item_Discounted_Price__c+ UNITY_Total_Tax__c,
  IF(
    NOT(ISBLANK(UNITY_Discount_Amount__c)),
    UNITY_Line_Item_Discounted_Price__c - UNITY_Discount_Amount__c+ UNITY_Total_Tax__c,
    UNITY_Line_Item_Discounted_Price__c+ UNITY_Total_Tax__c
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Final Price with Adjustments. Includes Tax</inlineHelpText>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_GL_Company__c</fullName>
        <description>The GL Company the invoice will be posted to in SL</description>
        <formula>IF(ISBLANK(UNITY_Business_Unit_Account__c),
UNITY_Case__r.UNITY_Business_Unit_Account__r.Company__c
,
UNITY_Business_Unit_Account__r.Company__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_Balance__c</fullName>
        <description>The balance of the invoice in SL</description>
        <label>SL Invoice Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_Comments__c</fullName>
        <label>Invoice Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_Description__c</fullName>
        <label>Invoice Description</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_External_Id__c</fullName>
        <description>This field will contain unique record id from source system.</description>
        <externalId>true</externalId>
        <label>UNITY Invoice External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_Margin_Amount__c</fullName>
        <formula>UNITY_Total_Price_With_Service_Charge__c   - UNITY_Total_Cost__c +  UNITY_Vendor_Service_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Margin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_Margin__c</fullName>
        <formula>if( UNITY_Total_Price__c  = 0, 0, UNITY_Invoice_Margin_Amount__c /   UNITY_Total_Price_With_Service_Charge__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Creation</fullName>
                    <default>true</default>
                    <label>Invoice Creation</label>
                </value>
                <value>
                    <fullName>Invoice sent for Manager Approval</fullName>
                </value>
                <value>
                    <fullName>Discount - Approved by Manager</fullName>
                </value>
                <value>
                    <fullName>Discount - Rejected by Manager</fullName>
                </value>
                <value>
                    <fullName>Invoice Finalized</fullName>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Returned to Agent</fullName>
                </value>
                <value>
                    <fullName>Invoice Amended</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Job_Site__c</fullName>
        <formula>UNITY_Case__r.Account.Name + BR() + 
UNITY_Case__r.Account.ShippingStreet + BR() + 
UNITY_Case__r.Account.ShippingCity + &quot; &quot; + UNITY_Case__r.Account.ShippingState + &quot; &quot; + UNITY_Case__r.Account.ShippingPostalCode + BR() + UNITY_Case__r.Account.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Last_Payment_Date_Time__c</fullName>
        <description>The date the last payment was applied in SL</description>
        <label>SL Last Payment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UNITY_Line_Item_Discount_Exists__c</fullName>
        <label>Line Item Discount Exists ?</label>
        <summarizedField>UNITY_Invoice_Line_Item__c.UNITY_Discount__c</summarizedField>
        <summaryFilterItems>
            <field>UNITY_Invoice_Line_Item__c.UNITY_Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Invoice_Line_Item__c.UNITY_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Line_Item_Discounted_Price__c</fullName>
        <label>Line Item Discounted Price</label>
        <summarizedField>UNITY_Invoice_Line_Item__c.UNITY_Final_Discounted_Price__c</summarizedField>
        <summaryFilterItems>
            <field>UNITY_Invoice_Line_Item__c.UNITY_Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Invoice_Line_Item__c.UNITY_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Line_Item_Discounts__c</fullName>
        <formula>OR ( UNITY_Does_Line_Item_Discount_Amt_Exist__c &gt; 0,    UNITY_Line_Item_Discount_Exists__c &gt;0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Manager_Approved_Discounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Approved Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Margin_Value_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Margin Value Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Margin_Value_Sent_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Margin Value Sent for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Missing_Required_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing Required Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Order_Type__c</fullName>
        <formula>IF( 
UNITY_Case__r.RecordType.DeveloperName = &quot;UNITY_Service_Request&quot;, 
&quot;Service&quot;, 
IF( 
UNITY_Case__r.RecordType.DeveloperName = &quot;UNITY_Preventative_Maintenance&quot;, 
&quot;PM&quot;, 
&quot;Project&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Original_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Original invoice if this is a regenerated invoice</description>
        <label>Original Invoice</label>
        <referenceTo>UNITY_Invoice__c</referenceTo>
        <relationshipName>RegeneratedInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Reason_Below_Threshold_Margin__c</fullName>
        <label>Reason - Below Threshold Margin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No customer-contracted overtime rate</fullName>
                </value>
                <value>
                    <fullName>Service Partner 4-hour minimum</fullName>
                </value>
                <value>
                    <fullName>Failed customer SLA, paid OT rates</fullName>
                </value>
                <value>
                    <fullName>Expedited due to parts sourcing</fullName>
                </value>
                <value>
                    <fullName>Work Order Expired</fullName>
                </value>
                <value>
                    <fullName>Ordered wrong part</fullName>
                </value>
                <value>
                    <fullName>Remote Dispatch</fullName>
                </value>
                <value>
                    <fullName>In-Correct Service Partner Dispatched</fullName>
                </value>
                <value>
                    <fullName>Quote vs. IVR</fullName>
                </value>
                <value>
                    <fullName>Vendor 1 Hour Minimum</fullName>
                </value>
                <value>
                    <fullName>Vendor Rate Exceeds Customer Rate</fullName>
                </value>
                <value>
                    <fullName>Regional Account - low margin</fullName>
                </value>
                <value>
                    <fullName>Approved Quoted Work</fullName>
                </value>
                <value>
                    <fullName>Quoted Work</fullName>
                </value>
                <value>
                    <fullName>NTE/Tax Discrepancy</fullName>
                </value>
                <value>
                    <fullName>1st Trip Completion</fullName>
                </value>
                <value>
                    <fullName>Warranty Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_SL_Posting_Period__c</fullName>
        <description>The posting period for the Invoice in SL</description>
        <inlineHelpText>The posting period for the Invoice in SL</inlineHelpText>
        <label>SL Posting Period</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_SL_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the invoice was successfully posted into SL</description>
        <label>SL Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_SL_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the invoice has been sent to SL for posting</description>
        <label>SL Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_SL_Reference_Id__c</fullName>
        <description>The SL Reference ID</description>
        <formula>TEXT( UNITY_Doc_Type__c )&amp; RIGHT(Name,8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SL Reference Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Service_Charge__c</fullName>
        <description>Service Charge Amount for Pass Through Customers</description>
        <label>Service Charge</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Service_Contract_Margin_Value__c</fullName>
        <label>Service Contract Margin Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Shared_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared To</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Invoices3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Shared_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Shared_to_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared to User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Status__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Tax_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the tax for this invoice has been posted into avatax and should not be processed again unless a credit is required</description>
        <label>Tax Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Tax_Process_Result__c</fullName>
        <description>Results of the tax processing</description>
        <label>Tax Process Result</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UNITY_Tax_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the tax call out occurred</description>
        <label>Tax Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Adjustments__c</fullName>
        <description>The discounted amount. Includes discounts from invoice and invoice lines</description>
        <formula>UNITY_Total_Price__c - UNITY_Final_Price2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Cost__c</fullName>
        <label>Total Cost</label>
        <summarizedField>UNITY_Invoice_Line_Item__c.UNITY_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>UNITY_Invoice_Line_Item__c.UNITY_Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Invoice_Line_Item__c.UNITY_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Cost_w_Vendor_Service_Fees__c</fullName>
        <formula>UNITY_Total_Cost__c - UNITY_Vendor_Service_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost (w/ Vendor Service Fees)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Price_With_Service_Charge__c</fullName>
        <description>Invoice Revenue, does not include tax.</description>
        <formula>UNITY_Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Price__c</fullName>
        <label>Total Price (Includes Service Charge)</label>
        <summarizedField>UNITY_Invoice_Line_Item__c.UNITY_Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>UNITY_Invoice_Line_Item__c.UNITY_Excluded_from_Total__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>UNITY_Invoice_Line_Item__c.UNITY_Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Invoice_Line_Item__c.UNITY_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Price_less_Service_Charge__c</fullName>
        <formula>UNITY_Total_Price__c -  UNITY_Service_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price-OLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Tax__c</fullName>
        <label>Total Tax</label>
        <summarizedField>UNITY_Invoice_Line_Item__c.UNITY_Sales_Tax__c</summarizedField>
        <summaryFilterItems>
            <field>UNITY_Invoice_Line_Item__c.UNITY_Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Invoice_Line_Item__c.UNITY_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Vendor_Supplied_Dis_Price__c</fullName>
        <description>Total Discounted Price of all vendor supplied line items only</description>
        <label>Vendor Supplied Discounted Price</label>
        <summarizedField>UNITY_Invoice_Line_Item__c.UNITY_Final_Discounted_Price__c</summarizedField>
        <summaryFilterItems>
            <field>UNITY_Invoice_Line_Item__c.UNITY_Is_Vendor_Supply__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>UNITY_Invoice_Line_Item__c.UNITY_Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Invoice_Line_Item__c.UNITY_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Vendor_Supplied_Final_Price__c</fullName>
        <description>Takes the total vendor supplied price from all invoice lines (with discount) and COMBINES with the invoice total discount
Izay: Removed Estimated Tax from Formula</description>
        <formula>IF(
AND(NOT(ISBLANK(UNITY_Discount__c)),UNITY_Discount__c&gt;0), 
(1-UNITY_Discount__c)*UNITY_Total_Vendor_Supplied_Dis_Price__c,
UNITY_Total_Vendor_Supplied_Dis_Price__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Supplied Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Vendor_Service_Fee__c</fullName>
        <label>Vendor Service Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unity_Payment_Status__c</fullName>
        <description>Status updated as payments are applied to the invoice via SL</description>
        <label>SL Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unpaid</fullName>
                    <default>true</default>
                    <label>Unpaid</label>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UNITY_Case__c</columns>
        <columns>UNITY_Customer__c</columns>
        <columns>UNITY_Job_Site__c</columns>
        <columns>UNITY_Invoice_Status__c</columns>
        <columns>UNITY_Invoice_Date__c</columns>
        <columns>UNITY_Agent__c</columns>
        <columns>UNITY_Tax_Processed__c</columns>
        <columns>UNITY_Tax_Posted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cancelled_Invoices</fullName>
        <columns>NAME</columns>
        <columns>UNITY_SL_Reference_Id__c</columns>
        <columns>UNITY_Customer__c</columns>
        <columns>UNITY_Job_Site__c</columns>
        <columns>UNITY_Invoice_Date__c</columns>
        <columns>UNITY_Invoice_Status__c</columns>
        <columns>UNITY_Tax_Processed__c</columns>
        <columns>UNITY_Tax_Posted__c</columns>
        <columns>UNITY_Total_Tax__c</columns>
        <columns>UNITY_Final_Price__c</columns>
        <columns>UNITY_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UNITY_Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled Invoices</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Finalized_Invoices</fullName>
        <columns>NAME</columns>
        <columns>UNITY_SL_Reference_Id__c</columns>
        <columns>UNITY_Customer__c</columns>
        <columns>UNITY_Job_Site__c</columns>
        <columns>UNITY_Invoice_Date__c</columns>
        <columns>UNITY_Invoice_Status__c</columns>
        <columns>UNITY_Tax_Processed__c</columns>
        <columns>UNITY_Tax_Posted__c</columns>
        <columns>UNITY_Total_Tax__c</columns>
        <columns>UNITY_Final_Price__c</columns>
        <columns>UNITY_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UNITY_Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Invoice Finalized</value>
        </filters>
        <label>Finalized Invoices</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Intercompany_Invoices</fullName>
        <columns>NAME</columns>
        <columns>UNITY_Customer__c</columns>
        <columns>MSPFS_Intercompany_Transfer__c</columns>
        <columns>UNITY_SL_Processed__c</columns>
        <columns>UNITY_SL_Process_Complete__c</columns>
        <columns>UNITY_GL_Company__c</columns>
        <columns>UNITY_Business_Unit_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MSPFS_Intercompany_Transfer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>UNITY_SL_Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Intercompany Invoices / Processed</label>
        <language>en_US</language>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoice_Creation</fullName>
        <columns>NAME</columns>
        <columns>UNITY_Customer__c</columns>
        <columns>UNITY_Job_Site__c</columns>
        <columns>UNITY_Invoice_Date__c</columns>
        <columns>UNITY_Invoice_Status__c</columns>
        <columns>UNITY_Tax_Processed__c</columns>
        <columns>UNITY_Tax_Posted__c</columns>
        <columns>UNITY_Total_Tax__c</columns>
        <columns>UNITY_Service_Charge__c</columns>
        <columns>UNITY_Final_Price__c</columns>
        <columns>UNITY_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UNITY_Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Invoice Creation</value>
        </filters>
        <filters>
            <field>UNITY_GL_Company__c</field>
            <operation>equals</operation>
            <value>15</value>
        </filters>
        <label>NSBS - Invoice Creation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MNS_Invoice_Creation</fullName>
        <columns>NAME</columns>
        <columns>UNITY_Customer__c</columns>
        <columns>UNITY_Job_Site__c</columns>
        <columns>UNITY_Invoice_Date__c</columns>
        <columns>UNITY_Invoice_Status__c</columns>
        <columns>UNITY_Tax_Processed__c</columns>
        <columns>UNITY_Tax_Posted__c</columns>
        <columns>UNITY_Total_Tax__c</columns>
        <columns>UNITY_Final_Price__c</columns>
        <columns>UNITY_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UNITY_Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Invoice Creation</value>
        </filters>
        <filters>
            <field>UNITY_GL_Company__c</field>
            <operation>equals</operation>
            <value>03</value>
        </filters>
        <label>MNS - Invoice Creation</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000000000}</displayFormat>
        <label>Invoice ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <recordTypes>
        <fullName>UNITY_Invoice</fullName>
        <active>true</active>
        <label>UNITY Invoice</label>
    </recordTypes>
</CustomObject>